--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(17, 26, 53);
-    color: rgb(206, 206, 233);
+    color: rgb(238, 238, 255);
     font-size: 20px;
     font-family: Atkinson, sans-serif;
     padding: 15px;
@@ -9,6 +9,7 @@ body {
 #content {
     background-color: #fff1;
     padding: 20px;
+    max-width: 800px;
 }
 
 textarea {
@@ -17,15 +18,18 @@ textarea {
     border: none;
     padding: 5px;
     font-size: 16px;
+    width: calc(100% - 15px);
 }
 
 input[type=checkbox] {
     transform: scale(1.4);
+    accent-color: rgb(115, 176, 255);
 }
 
 #auto_update {
     margin-left: 15px;
     margin-right: 5px;
+    margin-bottom: 40px;
 }
 
 button {
